# user-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: commands.py  functions.py  group_cfg.py  main.py  user_cfg.py
usys/: main.py
usys/flags/: update.py  version.py
usys/functions/: apache_cfg.py  commands.py  functions.py  group_cfg.py  permission_cfg.py  samba_cfg.py  ssh_cfg.py  user_cfg.py
usys/shell/: foldercompleter.py  shell.py  user_group_completer.py
