[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usys"
version = "0.1.0"
description = "Linux user manager"
readme = "README.md"
authors = [{ name="Wattox00"}]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
usys = "usys.main:main"
